# alloff-backoffice-server

./: .gitignore  11월 24일 정지윤 동명이인 처리.ipynb  21-09-01_21-11-25_invoice.xls  21-09-01_21-11-25_transfer.xlsx  21-09-01_21-11-25_transfer_tagged.xlsx  21-09-01_21-11-25_마담정리.xlsx  Add Images to Inventories.ipynb  Add Images, Ordered to RIs.ipynb  Change order address.ipynb  Dashboard.ipynb  Dockerfile  Extened Order Migration.ipynb  Finance.ipynb  Inventory adder.ipynb  Inventory from_url to in_order_id.ipynb  Inventory.ipynb  Magic Receiving.ipynb  Notification Logs Migration.ipynb  Receive and print.ipynb  Reversing EZAdmin.ipynb  Reverting shipping.ipynb  Unicro Parser.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  build_and_push_ecs.sh  docker-compose.yml  example.env  manage.py  outProduct.ipynb  protoc-generator.sh  push_task_definition.sh  pyproject.toml  readme.md  resize_images.py  schema.yml  task-definition.json  test.xls  배송.ipynb  배송처리.ipynb  (+1 more)
.aws/: task-definition-dev-company.json  task-definition-dev.json  task-definition-prod-company.json  task-definition-prod.json
.github/workflows/: deploy-dev.yml  deploy-prod.yml  trigger-api-deployment.yml
alloff_backoffice_server/: apscheduler.py  asgi.py  settings.py  urls.py  wsgi.py
analytics/core/: google.py  service_account.json
analytics/models/: exhibition.py
analytics/notebooks/: Coltorti CSV Registration.ipynb
analytics/scripts/: exhibition.py
analytics/services/: order_stat.py
analytics/viewsets/: order_stat.py
core/: company_auth_viewset.py  download_image_to_s3.py  grpc_exception.py
core/image/: __init__.py  download_image.py  processed_image_path.py  resize_and_cache_image.py  url_filters.py
functions/image/: image_to_bytes.py  resize_and_cache_image.py  resize_image.py
functions/product/: cache_image.py  thumbnail.py
logistics/: handlers.py
logistics/migrations/: 0001_initial.py
logistics/models/: inventory.py  received_item.py  shipping_notice.py
logistics/serializers/: courier.py  inventory.py  package.py  received_item.py  shipping_notice.py
logistics/services/: base.py  courier.py  package.py  shipping_notice.py
logistics/viewsets/: courier.py
middlewares/: version.py
office/: admin.py  apps.py  signals.py
office/alimtalk/: base.py  cancel_finished.py  delivery_started.py
office/drf/: pagination.py  search_filter.py
office/iamport/: __init__.py
office/label/: escape_xml.py  print_label.py  receiving_label.py  shipping_label.py
office/middlewares/: api_auth.py
office/migrations/: 0001_initial.py  0002_profile_uuid.py  0003_auto_20220209_1516.py  0004_companybrand_brand_key.py  (+10 more)
scripts/: fix_weird_cached_images.py  update_users_created.py
static/: openapi-schema.yml
tagger/: admin.py  views.py
(+408 files in other folders)
