[tool.poetry]
name = "alloff-backoffice-server"
version = "0.1.0"
description = ""
authors = ["Steve Cheong <j.stephen.cheong@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
djangorestframework = "^3.12.4"
Markdown = "^3.3.4"
django-filter = "^21.1"
mongoengine = "^0.23.1"
iamport-rest-client = "^0.8.2"
django-cors-headers = "^3.8.0"
django-rest-framework-mongoengine = {git = "https://github.com/lessbutter/django-rest-framework-mongoengine.git"}
djangorestframework-simplejwt = "^4.8.0"
httpx = "^0.19.0"
simplejson = "^3.17.5"
arrow = "^1.2.0"
slack-sdk = "^3.11.2"
python-dotenv = "^0.19.0"
psycopg2-binary = "^2.9.1"
pyjwt = "2.1.0"
drf-spectacular = "^0.20.1"
boto3 = "^1.18.58"
django-storages = "^1.12"
shortuuid = "^1.0.1"
Pillow = "^8.3.2"
django-extensions = "^3.1.3"
openpyxl = "^3.0.9"
beautifulsoup4 = "^4.10.0"


[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
black = "^21.9b0"
PyYAML = "^5.4.1"
uritemplate = "^3.0.1"
ipython = "^7.28.0"
uvicorn = "^0.15.0"
gunicorn = "^20.1.0"
jupyter = "^1.0.0"
pandas = "^1.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
